darkstyle.css
/* Desktop CSS */

body {
    background-color: #24252A;
}


.wrapper {
	width: 100%;
	height: 100%;
	z-index: 1;
}

.sideMenu {
	background-color: #201E23;
	border-left: thin solid #5F5F5F;
	border-right: thin solid #5F5F5F;
	text-align: center;
	font-family: 'Muli', sans-serif;
	font-size: 25px;
	width: 250px;
	height: 110vh;
	top: 0px; 
	margin-top: -10px;
	margin-left: 10px;
	overflow: hidden;
	position: fixed;
	z-index: 10;
}

.profilePicture {
	max-height: 250px;
	max-width: 200px;
	margin-left: 25px;
	overflow: hidden;
}


.sideMenuInfoEducation {
	margin-top: 50px;	
}

.sideMenuInfo {
	text-align: left;
	line-height: 5px;
	margin-top: 30px;
	margin-left: 13px;
	font-size: 15px;
}

.sideMenuInfoContact {
	display: inline-block;
}

.scalableContactInfo {
	cursor: pointer;
	margin-right: 10px;
  	display: inline-block;
	transition: all .2s ease-in-out;
}

.scalableContactInfo:hover {
	transform: scale(1.2);
}


#email {
	margin-top: 30px;
	display: none;
}

#skype {
	margin-top: 30px;
	display: none;
}

#discord {
	margin-top: 30px;
	display: none;
}

.URL {
	color: #3175FF;
}

.content {
	margin-top: 10px;
	margin-left: 290px;
	position: fixed;
	width: 100%;
	height: 100%;
	font-family: 'Muli', sans-serif;
}

.contentGrid {
	position: relative;
	border: thin ridge;
	width: 1000px;
	height: 735px;
}

.contentGridItem {
	width: 300px;
	height: 350px;
	border: thin ridge;
	border-color: #606060;
	float: left;
	margin-right: 30px;
	margin-bottom: 30px;
}

.footer {
	clear: both;
}

hr { 
    display: block;
    border-style: dotted;
	border-color: #3B3B3B;
    border-width: 1px;
}

h1 {
	
    color: white;
    text-align: center;
	text-shadow: 1px 1px grey;
}

h2 {
	color: #D0D0D0;
}

h3 {
	color: #D0D0D0
}

h4 {
	color: #D0D0D0
}

h5 {
	color: #D0D0D0
}

h6 {
	color: #D0D0D0
}

p {
	color: #D0D0D0;
}


/* Mobile CSS */
@media screen and (max-width: 500px) {
	
}

